Merging recent changes in JDK9 javac (b150).